# rust-devtimer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  saved_times.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: main.rs
