[package]
name = "devtimer"
version = "0.1.0"
edition = "2021"
authors = ["Frederik Koch <me@frederikkoch.de>"]
description = "A simple, fast, and efficient command-line time tracking tool"
readme = "README.md"
repository = "https://github.com/Fr3d33/rust-devtimer"
license = "MIT"
keywords = ["cli", "time-tracking", "productivity", "timer"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

